tests/init_state/error_span/structured_ref_obligation_unfulfilled_at_drop_span.err.expected
error: at 6:17: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 6 |                 drop r;
   |                 ^^^^^^
